# tihrc-awidgets

./: .gitignore  demo.py  pyproject.toml
.github/workflows/: publish.yml
tests/: _tmain.py  test_import.py
tihrc/awidgets/: __init__.py  advanced_text_edit.py  color_button.py  guide_panel.py  value_slider.py
