[project]
name = "tihrc_awidgets"
version = "0.1.1"
description = "Advanced Widgets for PySide6"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = ["_tmain.py", "test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["tihrc"]
